# videoAI

./: .env.example  .gitignore  .gitlab-ci.yml  .project-root  .skylos.yml  AGENTS.md  AI_PROJECT_REFERENCE.md  BUGS.md  BUGS_AUDIT_2026-05.md  COMPFYUI_INTEGRATION.md  FUTURE_ROADMAP.md  GITLAB_SETUP_INSTRUCTIONS.md  HOW_TO_RUN_TUI.txt  LINTING.md  PROJECT_STATUS.md  README.md  RESEARCH_WHAT_TO_ADD.md  SKYLOS_SCAN_RESULTS.md  SKYLOS_WORKFLOW.md  TODO.md  bootstrap_pipeline.py  comfy_color_workflow.json  comfy_fast_workflow.json  comfy_test_err.txt  comfy_test_out.txt  coverage_baseline.txt  download_f5.py  launch_studio.bat  launch_studio_silent.vbs  launch_tui.ps1  open_dashboard.bat  opencode.json  package-lock.json  package.json  pipeline_plan.md  ponytail-review-findings.json  prompts.yaml  pyproject.toml  pyrightconfig.json  realesrgan.pyi  (+17 more)
.github/workflows/: ci.yml  pyo3-wheel-ci.yml  rust-worker-ci.yml
.kiro/steering/: tech.md  (+3 more)
.ponytail/: check_output.py  gen_workflow.py
_archive/: README.md  style_resolver.py
agents/: architect.md  code-reviewer.md  decision_engine.py  director_agent.py  executive_agent.py  hinglish_glossary.py  llm_client.py  performance-optimizer.md  planner.md  python-reviewer.md  security-reviewer.md  tdd-guide.md  ui_state.py
audio/: __init__.py  audio_fx.py  audio_proxy.py  f5_worker.py  indicf5_worker.py  omnivoice_worker.py  supertonic_worker.py  tts_alignment.py
character_voices/: README.txt  dhruv_narration.json
comfyui_nodes/video_ai_nodes/: LICENSE  README.md  __init__.py  helpers.py  nodes.py  pyproject.toml  requirements.txt
config/: __init__.py  anime_face_inspiration.json  config.py  config.yaml  config_schemas.py  panel_layouts.json  panel_layouts.roboflow.json
core/: __init__.py  decision_record.py  director_memory.py  main.py  outline_shaping.py  pipeline_cli.py  pipeline_graph.py  pipeline_long.py  post_production.py  pre_production.py  preflight.py  preview.py  segment_runner.py
dashboard/: .fallowrc.json  eslint.config.js  package-lock.json  package.json  tailwind.config.js  vite.config.js
docs/: AGENTS.md  CLAUDE.md  P0_P1_IMPLEMENTATION_REPORT.md  RESEARCH_WHAT_TO_ADD.md  VideoAI_Current_Status_Cleanup_Hardening_Plan.md  bug_resolution_history.md  code_review_findings.md  configuration_reference.md  current_code_audit_2026-06-16.md  implementation_plan.md  layered_v3_setup.md  qwen_image_edit_setup.md  runtime_safety_guide.md  service_instructions.txt  system_architecture.md  testing_and_linting.md  upstream-tooling.md
jobs/: __init__.py  job_store.py  run_worker.py  worker.py
memory/: __init__.py  blackboard.py  memory.py  permanent_memory.py  project_store.py
patches/: ACCEPTANCE.md  README.md  _brace_probe.txt  phase5.patch  phase6.patch  phase7a.patch  phase7b.patch  phase7c.patch  phase7c_local_ui.patch  phase7c_preflight.patch  phase7c_schema.patch  phase7c_test_local_ui_api.patch  phase7c_test_preflight.patch  phase7c_test_preflight_extended.patch  phase7c_ui.patch  phase7d_audio_proxy.patch  phase7d_bootstrap_pipeline.patch  phase7d_codebase_onboarding.patch  phase7d_config_schemas.patch  phase7d_config_yaml.patch  phase7d_dashboard_create_job.patch  phase7d_local_ui.patch  phase7d_pipeline_long.patch  phase7d_rust_worker.patch  phase7d_segment_runner.patch  phase7d_studio_tui.patch  phase7d_studio_tui_help.patch  phase7d_test_audio_proxy.patch  phase7d_test_bootstrap_source.patch  phase7d_test_job_system.patch  phase7d_test_local_ui_api.patch  phase7d_test_phase0_fallbacks.patch  phase7d_test_segment_runner_extended.patch  phase7d_test_segment_runner_helpers.patch  phase7d_worker.patch
plans/: 001-reliable-media-pipeline-handoff.md  002-manga-animatic-output.md  README.md
projects/: series_1.yaml
rust/: rustfmt.toml
rust/worker/: AGENTS.md  Cargo.toml  pyproject.toml
rust/worker/src/: assets.rs  audio.rs  checkpoint.rs  doctor.rs  ffmpeg_exec.rs  ffmpeg_plan.rs  lib.rs  main.rs  media.rs  python.rs  status.rs  supervisor_assembly.rs  text.rs
rust/worker/tests/: checkpoint_cli.rs
scripts/: check_environment.py  cleanup_artifacts.py  notion_smoke_test.py  parse_skylos.ps1  phase6_acceptance.py  qwen_edit_spike_check.py  run_worker_service.ps1  setup_indicf5.ps1
static/: ab_picker.html  index.html
stories/: the_last_lamplighter.txt  voice_test.txt
tests/: conftest.py  manual_integration_test.py  manual_integration_test_b.py  test_2026_06_fixes.py  test_assembler_extra.py  test_assembler_loudnorm.py  test_audio_crossfade.py  test_audio_fx.py  test_audio_proxy.py  test_audio_proxy_coverage_extra.py  test_audio_proxy_extended.py  test_autoaccept.py  test_batch_mode.py  test_blackboard.py  test_bootstrap_pipeline_extra.py  test_bootstrap_sentry_smoke.py  test_bootstrap_source.py  test_check_environment.py  test_checkpoint.py  test_circuit_breaker.py  test_comfyui.py  test_comfyui_edges.py  test_comfyui_runtime_extra.py  test_comfyui_smoke.py  test_compatibility_extended.py  test_config.py  test_config_api.py  test_config_schemas.py  test_context_manager.py  test_crewai_breaker.py  test_critic.py  test_decision_engine.py  test_decision_record.py  test_degradation_ledger.py  test_devanagari_translation.py  test_director_agent_extended.py  test_director_agent_helpers.py  test_director_split.py  test_emotion_control.py  test_framepack_i2v.py  (+77 more)
tools/: ab_compare_t2i.py  import_anime_face_dataset.py  import_manga_panel_dataset.py
utils/: __init__.py  benchmark.py  checkpoint.py  circuit_breaker.py  compatibility.py  concurrency.py  context_manager.py  crewai_breaker.py  critic.py  debug_helper.py  deep_merge.py  diagnose.py  emotion_control.py  errors.py  git_helper.py  local_ui.py  map_codebase.py  media_analyzer.py  model_eval.py  narration_sanitize.py  notion_client.py  ollama_client.py  path_utils.py  preflight.py  quality_check.py  researcher.py  retry_manager.py  scene_director.py  sentry.py  seo_generator.py  shutdown.py  source_loader.py  source_splitter.py  specialized_models.py  story_planner.py  time_format.py  topic_researcher.py  tui_theme_tester.py  url_security.py  utils.py  (+3 more)
(+224 files in other folders)
